--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 
     <div id="inicio-msg">
         <h1>¡Bienvenido a la página de Chaico!</h1>
-        <p>Una experiencia sinfónica inspirada en Nicki Nicole.</p>
+        <p>Una experiencia sinfónica</p>
         <button onclick="iniciarPagina()">Entrar</button>
     </div>
 
@@ -438,3 +438,4 @@
 </body>
 
 </html>
+
